WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190378
PSON: Doing a cross-site navigation via the URL bar does not swap process on iOS
https://bugs.webkit.org/show_bug.cgi?id=190378
Summary
PSON: Doing a cross-site navigation via the URL bar does not swap process on iOS
Chris Dumez
Reported
2018-10-08 16:14:01 PDT
Doing a cross-site navigation via the URL bar does not swap process on iOS, even though PSON is enabled.
Attachments
Patch
(9.23 KB, patch)
2018-10-08 16:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(8.28 KB, patch)
2018-10-09 10:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-10-08 16:14:26 PDT
<
rdar://problem/45059466
>
Chris Dumez
Comment 2
2018-10-08 16:22:28 PDT
Created
attachment 351830
[details]
Patch
Alex Christensen
Comment 3
2018-10-09 10:39:46 PDT
Comment on
attachment 351830
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=351830&action=review
> Source/WebKit/ChangeLog:10 > + which would use a new WebView for the speculative load and rely on the _relatedWebView SPI to use
WKWebView
> Source/WebKit/UIProcess/WebProcessPool.cpp:2147 > + url = URL { { }, page.configuration().relatedPage()->pageLoadState().url() };
I feel like url needs a more descriptive name. sourceURL?
> Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:1852 > + auto processPoolConfiguration = adoptNS([[_WKProcessPoolConfiguration alloc] init]);
These two tests should share some code.
Chris Dumez
Comment 4
2018-10-09 10:58:51 PDT
Created
attachment 351897
[details]
Patch
Geoffrey Garen
Comment 5
2018-10-09 11:15:00 PDT
Comment on
attachment 351897
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2018-10-09 12:04:54 PDT
Comment on
attachment 351897
[details]
Patch Clearing flags on attachment: 351897 Committed
r236973
: <
https://trac.webkit.org/changeset/236973
>
WebKit Commit Bot
Comment 7
2018-10-09 12:04:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug