PSON: Doing a cross-site navigation via the URL bar does not swap process on iOS https://bugs.webkit.org/show_bug.cgi?id=190378 <rdar://problem/45059466>

Reviewed by Geoffrey Garen.

Source/WebKit:

Process swapping was sometimes not happening via URL bar navigation on iOS due to top-hit preloading,
which would use a new WKWebView for the speculative load and rely on the _relatedWebView SPI to use
the same WebContent process as the view currently on screen.

To address the issue, if the source URL is empty and the page has a related page, use the related
page's URL as source URL when doing the process-swap decision.

* UIProcess/API/APIPageConfiguration.cpp:
(API::PageConfiguration::relatedPage const):
(API::PageConfiguration::relatedPage): Deleted.
* UIProcess/API/APIPageConfiguration.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processForNavigationInternal):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:


Canonical link: https://commits.webkit.org/205356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236973 268f45cc-cd09-0410-ab3c-d52691b4dbfc